# test_playwright

./: .env.docker  .env.template  .gitignore  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
consumer/: config.py  main.py  run.py
consumer/database/: loader.py  queries.py
crawler/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py  write_links.py
crawler/src/: models.py  parser.py  scraper.py  worker.py
crawler/src/components/: scraper.py
crawler/src/core/: browser.py  config.py  exceptions.py  worker.py
crawler/src/utils/: bounded_task_group.py  infinite_wait.py  parse_username.py
loader/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run.py
loader/database/: loader.py  queries.py
loader/src/core/: config.py
loader/src/database/: loader.py  queries.py
