[tool.poetry]
name = "test-playwright"
version = "0.1.0"
description = "Тестовое задание по Playwright"
authors = ["LuchnikKek <ilua.kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "1.42.0"
asyncpg = "0.29.0"
pydantic-settings = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
