[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["LuchnikKek <ilua.kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "2.2.1"
msgspec = "0.18.6"
aio-pika = "9.4.1"
playwright = "1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
