[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["LuchnikKek <ilua.kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.29.0"
msgspec = "0.18.6"
aio-pika = "9.4.1"
pydantic-settings = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
